--- a/panda/frontend/package.json
+++ b/panda/frontend/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.37"
+    "element-plus": "^2.2.27",
+    "vue": "^3.2.37",
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
